<resources>
    <string name="app_name">olx</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="not_have_account_register">Not have Account? <b>Register</b></string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account_sign_in">Already have Account? <b>Login</b></string>
    <string name="logout">Logout</string>
    <string name="phone_login">Phone Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="didn_t_recieve_otp_resend">Didn\'t Recieve OTP? <b>Resend</b></string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="example_example_com">example@example.com</string>
    <string name="phone">Phone</string>
    <string name="_123456">123456</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="dob">DOB (dd/MM/yyyy)</string>
    <string name="member_since">Member Since</string>
    <string name="account_status">Account Status</string>
    <string name="not_verified">Not Verified</string>
    <string name="preferences">Preferences</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="eidt_profile">Eidt Profile</string>
    <string name="update">Update</string>
    <string name="forgot_password_recover">Forgot Password? <b>Recover</b></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="to_change_your_password_u_must_verify_it_s_realy_u_by_entering_your_current_password_your_new_password_should_be_different_from_current_password">To change your password u must verify it\'s realy u by entering your current password. Your new password should be different from current password.</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="back_button">Back Button</string>
    <string name="verify_account">Verify Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="create_new_ad">Create New Ad</string>
    <string name="post_ad">POST AD</string>
    <string name="pick_upto_10_images">Pick upto 10 images</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
<!--    <string name="maps_api_key">AIzaSyC-SBejs1Wysei7fEgppbpTw_g9UILEZWg</string>-->
    <string name="maps_api_key">AIzaSyCWJmAz0wYtOwIBQX7vqPcnh1jFtutR2HM</string>
    <string name="pick_location">Pick Location</string>
    <string name="done">Done</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_phone">Continue With Phone</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="logo">logo</string>
    <string name="choose_location">Choose Location</string>
    <string name="search">Search</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="the_ad_title">The Ad Title</string>
    <string name="the_long_description_of_the_ad_that_can_be_of_multiple_lines_but_will_show_here_in_3_lines">The long description of the Ad that can be of multiple lines but will show here in 3 lines.</string>
    <string name="the_address_of_the_ad">The address of the Ad</string>
    <string name="new_word">New</string>
    <string name="price_symbol">$</string>
    <string name="_00">00</string>
    <string name="ad_details">Ad Details</string>
    <string name="address">Address</string>
    <string name="seller_description">Seller Description</string>
    <string name="chat">Chat</string>
    <string name="chats">Chats</string>
    <string name="call">Call</string>
    <string name="sms">Sms</string>
    <string name="map">Map</string>
    <string name="_1_3">1/3</string>
    <string name="published_ads">Published Ads:</string>
    <string name="start_typing">Start Typing...</string>
    <string name="apiKey">06a8f1eefb1a27e768326efeb7134c9b</string>
</resources>