<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".fragments.AccountFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/gray01"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person_white"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"/>

<!--        Name-->
        <TextView
            android:id="@+id/nameLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_below="@id/profileIv"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_below="@id/profileIv"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp" />

<!--        Email-->
        <TextView
            android:id="@+id/emailLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_below="@id/nameLabelTv"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/emailTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_example_com"
            android:layout_below="@id/nameLabelTv"
            android:layout_alignParentEnd="true"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_marginTop="10dp" />

<!--Phone-->
        <TextView
            android:id="@+id/phoneLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_below="@id/emailLabelTv"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/phoneTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_123456"
            android:layout_below="@id/emailLabelTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp" />

<!--        dob-->
        <TextView
            android:id="@+id/dobLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_below="@id/phoneLabelTv"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/dobTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dd_mm_yyyy"
            android:layout_below="@id/phoneLabelTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp" />

<!--        Member Since-->
        <TextView
            android:id="@+id/memberSinceLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_since"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_below="@id/dobLabelTv"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/memberSinceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dd_mm_yyyy"
            android:layout_below="@id/dobLabelTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp" />

<!--        Verification-->
        <TextView
            android:id="@+id/verificationLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_status"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_below="@id/memberSinceLabelTv"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/verificationTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_verified"
            android:layout_below="@id/memberSinceLabelTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp" />


        <LinearLayout
            android:layout_below="@id/verificationLabelTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/preferences"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/logoutCv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:minHeight="48dp"
                app:cardCornerRadius="8dp"
                app:contentPadding="10dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    app:drawableEndCompat="@drawable/ic_next_white"
                    app:drawableStartCompat="@drawable/ic_logout_white" />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/editProfileCv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:contentPadding="10dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:drawablePadding="10dp"
                    app:drawableEndCompat="@drawable/ic_next_white"
                    android:gravity="center_vertical"
                    app:drawableStartCompat="@drawable/ic_person_gray" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/changePasswordCv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:contentPadding="10dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:drawablePadding="10dp"
                    app:drawableEndCompat="@drawable/ic_next_white"
                    android:gravity="center_vertical"
                    app:drawableStartCompat="@drawable/ic_edit" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>