<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.my_ads.AdDetailsActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <!--   Back Button    -->
        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button" />

        <!--   Toolbar Image    -->
        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad_details"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_centerInParent="true"/>

        <ImageButton
            android:id="@+id/toolbarDeleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_gray"
            android:layout_toStartOf="@id/toolbarEditBtn"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/toolbarEditBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:layout_toStartOf="@id/toolbarFavBtn"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent" />


        <ImageButton
            android:id="@+id/toolbarFavBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fav_no"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent" />

        <!--   View for to be separated by a second layout   -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray02"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRL">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imageSliderVp"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <TextView
                android:id="@+id/priceSymbolTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageSliderVp"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/price_symbol" />

            <TextView
                android:id="@+id/priceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/priceSymbolTv"
                android:layout_below="@id/imageSliderVp"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/_00"/>

            <TextView
                android:id="@+id/conditionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:layout_below="@id/imageSliderVp"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:textSize="12sp"
                android:text="@string/new_word"/>

            <TextView
                android:id="@+id/dateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageSliderVp"
                android:layout_alignParentEnd="true"
                android:textSize="12sp"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_marginTop="4dp"
                android:text="@string/dd_mm_yyyy" />

            <TextView
                android:id="@+id/categoryLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/priceSymbolTv"
                android:layout_marginTop="10dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/category" />

            <TextView
                android:id="@+id/categoryTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryLabelTv"
                style="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="@tools:sample/lorem[2]"
                android:text="@string/category" />

            <TextView
                android:id="@+id/titleLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryTv"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginTop="10dp"
                android:text="@string/title" />

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleLabelTv"
                style="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="@tools:sample/lorem[20]"/>

            <TextView
                android:id="@+id/descriptionLabelTv"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_below="@id/titleTv"
                android:text="@string/description" />


            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_below="@id/descriptionLabelTv"
                tools:text="@tools:sample/lorem[20]"/>

            <TextView
                android:id="@+id/addressLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionTv"
                android:layout_marginTop="10dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/addressTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addressLabelTv"
                style="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="@tools:sample/lorem[10]"/>

            <TextView
                android:id="@+id/recieptProfileLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addressTv"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_marginTop="10dp"
                android:text="@string/seller_description"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/recieptProfileCv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recieptProfileLabelTv"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/recieptProfileIv"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_person_white"
                        android:background="@color/gray01"
                        android:layout_marginEnd="10dp"
                        app:shapeAppearanceOverlay="@style/ImageStyle_Circle"/>

                    <TextView
                        android:id="@+id/sellerNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/full_names"
                        android:layout_toEndOf="@id/recieptProfileIv"
                        style="@style/TextAppearance.MaterialComponents.Body1"/>

                    <TextView
                        android:id="@+id/memberSinceLabelTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sellerNameTv"
                        android:text="@string/member_since"
                        android:layout_toEndOf="@id/recieptProfileIv"
                        style="@style/TextAppearance.MaterialComponents.Caption"/>

                    <TextView
                        android:id="@+id/memberSinceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dd_mm_yyyy"
                        android:layout_marginStart="5dp"
                        android:layout_below="@id/sellerNameTv"
                        android:layout_toEndOf="@id/memberSinceLabelTv"
                        style="@style/TextAppearance.MaterialComponents.Caption"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/optionsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/chatBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/m_button_height"
            android:layout_weight="1"
            app:cornerRadius="8dp"
            android:textSize="11sp"
            android:text="@string/chat"
            app:icon="@drawable/ic_chats_white"
            app:iconSize="12sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/callBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/m_button_height"
            android:layout_weight="1"
            app:cornerRadius="8dp"
            android:textSize="11sp"
            android:text="@string/call"
            app:icon="@drawable/ic_call_white"
            app:iconSize="12sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/smsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/m_button_height"
            android:layout_weight="1"
            app:cornerRadius="8dp"
            android:textSize="11sp"
            android:text="@string/sms"
            app:icon="@drawable/ic_sms_white"
            app:iconSize="12sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mapBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/m_button_height"
            android:layout_weight="1"
            app:cornerRadius="8dp"
            android:textSize="11sp"
            android:text="@string/map"
            app:icon="@drawable/ic_location_black"/>

    </LinearLayout>

</RelativeLayout>