<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.auth.LoginPhoneActivity">


    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">


        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/phone_login"
            style="@style/TextAppearance.MaterialComponents.Body1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray02"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRL"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_phone_white"
            android:layout_centerHorizontal="true"
            app:contentPadding="10dp"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle" />

        <TextView
            android:id="@+id/loginLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_account"
            android:layout_below="@id/profileIv"
            android:layout_centerHorizontal="true"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:id="@+id/phoneInputRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginLabelTv"
            android:layout_marginTop="15dp"
            android:visibility="visible">


            <com.hbb20.CountryCodePicker
                android:id="@+id/phoneCodeTil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:minHeight="56dp"
                android:minWidth="60dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_contentColor="@color/gray01"
                app:ccp_rememberLastSelection="true"
                app:ccp_showNameCode="false"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/phoneCodeTil"
                android:hint="@string/phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp">

                <EditText
                    android:id="@+id/phoneNumberEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendOtpBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m_button_height"
                android:text="@string/send_otp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/phoneNumberTil"
                app:cornerRadius="8dp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/otpInputRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            android:layout_below="@id/loginLabelTv">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otpTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopEnd="8dp">

                <EditText
                    android:id="@+id/otpEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/verifyOtpBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m_button_height"
                android:text="@string/verify"
                android:layout_marginTop="10dp"
                android:layout_below="@id/otpTil"
                app:cornerRadius="8dp" />


            <TextView
                android:id="@+id/resendOtpTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_recieve_otp_resend"
                android:layout_below="@id/verifyOtpBtn"
                android:layout_centerHorizontal="true"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:padding="5dp" />

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>